add whatsapp input

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="button-alertBox">Ok!</button>
       </div>
       <div id="contact-form">
-        <input type="email" id="email" placeholder="Email" required />
+        <input type="email" id="email" placeholder="Email o WhatsApp" required />
         <input type="text" id="name" placeholder="Nombre" required />
         <textarea
           cols="2"
